Fixed projects alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -656,9 +656,10 @@ header .navbar ul li a:hover {
   flex-wrap: wrap;
   gap: 1.5rem;
   margin: 2rem;
+  justify-content: center;
 }
 .work .box-container .box {
-  flex: 1 1 30rem;
+  flex: 0 0 40rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   position: relative;
